--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>{% block title %}{% endblock %}</title>
+
         {% block stylesheets %}{% endblock %}
+
         <link rel="stylesheet" href="/CSS/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/dbc1e24743.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/CSS/app.css">
     </head>
+
     <body style="background-color: #011f55">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="{{ path('homepage') }}">
@@ -23,37 +27,37 @@
                 <ul class="navbar-nav align-items-center" style="width: 100%;">
                     <li class="nav-item mx-auto active">
                         <a class="nav-link btn" href={{ path('homepage', {'_fragment': 'goals'}) }}>
-                            <i class="fas fa-bullseye"></i>
+                            <i class="fas fa-bullseye mr-2"></i>
                             Objectifs
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'technologies'}) }}">
-                            <i class="fas fa-language"></i>
+                            <i class="fas fa-language mr-2"></i>
                             Langages & Technologies
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'projects'}) }}">
-                            <i class="fas fa-clipboard-list"></i>
+                            <i class="fas fa-clipboard-list mr-2"></i>
                             Réalisations
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'experiences'}) }}">
-                            <i class="fas fa-tasks"></i>
+                            <i class="fas fa-tasks mr-2"></i>
                             Expériences
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'diplomas'}) }}">
-                            <i class="fas fa-graduation-cap"></i>
+                            <i class="fas fa-graduation-cap mr-2"></i>
                             Formations
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'contacts'}) }}">
-                            <i class="fas fa-id-card"></i>
+                            <i class="fas fa-id-card mr-2"></i>
                             Contacts
                         </a>
                     </li>
@@ -63,12 +67,13 @@
 
         {% block body %}{% endblock %}
 
-        <div class="footer text-center">
-            <h5>Copyright &copy; - Tous droits réservés - Baptiste Bidaux - {{ "now" | date("Y")}}</h5>
+        <div class="footer text-center pt-2" style="margin-bottom: 0 !important;">
+            <h5>Copyright &copy; Tous droits réservés - Baptiste Bidaux - {{ "now" | date("Y")}}</h5>
         </div>
 
 
         {% block javascripts %}{% endblock %}
+
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
