--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}
+    Connexion
+{% endblock %}
 
 {% block body %}
     <div class="container mb-3" id="login-form">
+        {% if error %}
+            <div class="alert alert-primary rounded-lg alert-dismissible fade show" role="alert">
+                <strong>Attention,</strong> 
+                identification impossible !
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endif %}
+
         <form method="post">
-            {% if error %}
-                <div class="alert alert-danger">
-                    <strong>Attention,</strong> 
-                    identification impossible !
-                </div>
-            {% endif %}
+            <h1 class="mb-5 pt-3 font-weight-normal">Connexion</h1>
 
-            {% if app.user %}
-                <div class="mb-3">
-                    Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
-                </div>
-            {% endif %}
-
-            <h1 class="h1 my-3 font-weight-normal">Connexion</h1>
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control login-control" required autofocus>
             <label for="inputPassword">Mot de passe</label>
@@ -26,7 +26,10 @@
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-            <button class="btn btn-lg btn-success mb-3 login-submit" type="submit">Valider</button>
+            <button class="btn btn-success mt-5 mb-3" type="submit">Valider</button>
+            {% if app.user %}
+               <a href="{{ path('app_logout') }}" class="btn btn-primary mt-5 mb-3" id="admin-logout">Déconnexion</a>
+            {% endif %}
         </form>
     </div>
 {% endblock %}
