Améliorations visuelles + GIF + icônes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/CSS/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/dbc1e24743.js" crossorigin="anonymous"></script>
+        <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="/CSS/app.css">
     </head>
 
@@ -27,37 +28,37 @@
                 <ul class="navbar-nav align-items-center" style="width: 100%;">
                     <li class="nav-item mx-auto active">
                         <a class="nav-link btn" href={{ path('homepage', {'_fragment': 'goals'}) }}>
-                            <i class="fas fa-bullseye mr-2"></i>
+                            <i class='bx bx-bullseye bx-tada bx-fw mr-2'></i>
                             Objectifs
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'technologies'}) }}">
-                            <i class="fas fa-language mr-2"></i>
+                            <i class='bx bx-code-alt bx-tada bx-fw mr-2' ></i>
                             Langages & Technologies
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'projects'}) }}">
-                            <i class="fas fa-clipboard-list mr-2"></i>
+                            <i class='bx bx-carousel bx-tada bx-fw mr-2' ></i>
                             Réalisations
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'experiences'}) }}">
-                            <i class="fas fa-tasks mr-2"></i>
+                            <i class='bx bx-task bx-tada bx-fw mr-2' ></i>
                             Expériences
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'diplomas'}) }}">
-                            <i class="fas fa-graduation-cap mr-2"></i>
+                            <i class='bx bxs-graduation bx-tada bx-fw mr-2'></i>
                             Formations
                         </a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link btn" href="{{ path('homepage', {'_fragment': 'contacts'}) }}">
-                            <i class="fas fa-id-card mr-2"></i>
+                            <i class='bx bxs-id-card bx-tada bx-fw mr-2' ></i>
                             Contacts
                         </a>
                     </li>
