--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -5,6 +5,11 @@ html, body {
     background-color: #011f55;
     scroll-behavior: smooth;
 }
+
+body {
+    margin: 0;
+}
+
 /*********************************** NAVBAR **************************************/
 
 .navbar {
@@ -24,12 +29,20 @@ html, body {
     max-width: 64px;
 }
 
+.bx {
+    margin-top: 0 !important;
+}
+
+.bx, a:link {
+    vertical-align: middle;
+}
+
 .nav-link.btn {
     background-color: #011f55;
     font-size: medium;
     border: solid #cf9f69 2px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
     margin-bottom: 10px;
 }
 
@@ -267,6 +280,12 @@ html, body {
     display: none ;
 }
 
+ol.carousel-indicators li {
+    background-color: #cf9f69;
+    height: 30px;
+    border-radius: 50%;
+}
+
 @media screen and (min-width: 576px) {
     .carousel-item {
         border: solid #cf9f69 10px;
@@ -276,7 +295,7 @@ html, body {
 @media screen and (min-width: 768px) {
     .carousel-caption {
         padding-bottom: 20px;
-        bottom: 20px;
+        bottom: 35px;
     }
 
     .carousel-caption h4 {
@@ -310,9 +329,30 @@ html, body {
     -webkit-transition: 0.4s;
 }
 
+img[src^="pictures/gifs"] {
+    width: 3vh;
+    height: 3vh;
+}
+
 @media screen and (min-width: 576px) {
     .accordion {
         font-size: 4vh;
+    }
+
+    img[src^="pictures/gifs"] {
+        width: 4vh;
+        height: 4vh;
+    }
+}
+
+@media screen and (min-width: 350px) and (max-width: 575px) and (orientation: portrait) {
+    .accordion {
+        font-size: 2.5vh;
+    }
+
+    img[src^="pictures/gifs"] {
+        width: 2.5vh;
+        height: 2.5vh;
     }
 }
 
@@ -321,12 +361,22 @@ html, body {
         height: 15vh;
         font-size: 6vh;
     }
+
+    img[src^="pictures/gifs"] {
+        width: 6vh;
+        height: 6vh;
+    }
 }
 
 @media screen and (min-width: 992px ) and (orientation: landscape) {
     .accordion {
-        height: 10vh;
+        height: 8vh;
         font-size: 4vh;
+    }
+
+    img[src^="pictures/gifs"] {
+        width: 4vh;
+        height: 4vh;
     }
 }
 
@@ -463,12 +513,6 @@ html, body {
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
 
-#download-cv:hover {
-    transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-}
-
 /************************************ FORM *****************************************/
 label, .btn[type="submit"], #admin-logout {
     font-size: 2vh;
@@ -503,12 +547,20 @@ label, .btn[type="submit"], #admin-logout {
 
 @media screen and (min-width: 992px) and (orientation: landscape) {
     label, .btn[type="submit"], #admin-logout {
-        font-size: 2vh;
+        font-size: 1.8vh;
     }
     .form-control {
         background-color: #011f55;
         color: white;
-        font-size: 2vh;
+        font-size: 1.8vh;
+    }
+}
+
+@media screen and (min-width: 2500px) and (orientation: landscape) {
+    #form {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -538,27 +590,34 @@ label.required:before {
     .who-am-i-content {
         font-size: 3vh !important;
     }
+
+    #who-am-i {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 @media screen and (min-width: 2500px) and (orientation: landscape) {
     .who-am-i-content {
-        font-size: 2.5vh !important;
+        font-size: 2vh !important;
     }
 }
 
-/*********************************** FOOTER ***************************************/
+/*********************************** FOOTER **************************************/
 
 .footer {
     color: #cf9f69;
+    margin-bottom: 20px;
 }
 
-/************************************* LOGIN ***************************************/
+/*********************************** LOGIN ***************************************/
 #login-form {
     color: white; 
     background-color: #0098ff;
 }
 
-/************************************* MESSAGES ************************************/
+/********************************** MESSAGES *************************************/
 
 .page-link {
     color: #0098ff;
@@ -567,4 +626,25 @@ label.required:before {
 .page-item.active .page-link, .page-link:hover {
     background-color: #0098ff;
     border-color: #0098ff;
+}
+
+/******************************** PROGRESS BAR ***********************************/
+.progress {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+  }
+  
+.progress-container {
+    width: 100%;
+    height: 100%;
+    background: #ccc;
+}
+  
+.progress-bar {
+    height: 100%;
+    background: #cf9f69;
+    width: 0%;
 }
