--- a/templates/main/messages.html.twig
+++ b/templates/main/messages.html.twig
@@ -76,16 +76,24 @@
             </table>
         </div>
 
+        {{ pages }}
+
         <div class="d-flex justify-content-center">
             <ul class="pagination pagination-lg">
                 <li class="page-item {% if page == 1 %} disabled {% endif %}">
                     <a class="page-link" href="{{ path('messages_page', {'page': page - 1}) }}">&laquo;</a>
                 </li>
-                {% for i in 1..pages %}
-                    <li class="page-item {% if page == i %}active{% endif %}">
-                        <a class="page-link" href="{{ path('messages_page', {'page': i}) }}">{{ i }}</a>
-                    </li>
-                {% endfor %}
+                {% if pages == 0 %}
+                    <li class="page-item {% if page == 1 %}active{% endif %}">
+                        <a class="page-link" href="{{ path('messages_page', {'page': 1}) }}">{{ 1 }}</a>
+                    </li> 
+                {% else %}
+                    {% for i in 1..pages %}
+                        <li class="page-item {% if page == i %}active{% endif %}">
+                            <a class="page-link" href="{{ path('messages_page', {'page': i}) }}">{{ i }}</a>
+                        </li>
+                    {% endfor %}
+                {% endif %}
                 <li class="page-item {% if page == pages %} disabled {% endif %}">
                     <a class="page-link" href="{{ path('messages_page', {'page': page + 1}) }}">&raquo;</a>
                 </li>
