--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -35,7 +35,7 @@
 
     <div class="container" id="technologies">
         <div class="row">
-            <div class="col-12 col-lg-6 px-0" id="frontend">
+            <div class="col-12 col-lg-6 px-0 mb-5" id="frontend">
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front frontend-card-front">
@@ -68,7 +68,7 @@
                     </div>
                 </div> 
             </div>
-            <div class="col-12 col-lg-6 px-0" id="backend">
+            <div class="col-12 col-lg-6 px-0 mb-5" id="backend">
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front backend-card-front">
@@ -138,7 +138,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="pictures/monbnb.png" class="d-block w-100" alt="Phooto du projet Mon BnB">
-                    <div class="carousel-caption d-block" style="background-color: royalblue">
+                    <div class="carousel-caption d-block" style="background-color: royalblue;">
                         <h2>Mon BnB</h2>
                         <h4>Création d'un site de BnB en Symfony 4</h4>
                         <a href="https://mon-bnb.herokuapp.com/" rel="noopener" target="blank" class="btn btn-info btn-lg">
@@ -320,7 +320,7 @@
             <img src="pictures/gifs/arrow-up.gif" style="display: inline-block">
         </button>
         <div class="panel mb-3" id="contacts-panel">
-            <div class="jumbotron" style="color: black; background-color: #cf9f69">
+            <div class="jumbotron" style="color: black; background-color: #cf9f69" id="contact-jumbotron">
                 <div class="row align-items-center">
                     <div class="col-lg-10" id="me-small-device">
                         <h1>Baptiste Bidaux</h1>
