--- a/templates/main/messages.html.twig
+++ b/templates/main/messages.html.twig
@@ -62,11 +62,11 @@
                             </td>
                             <td>
                                 <a href="{{ path('message_delete', {'id': message.id}) }}" class="btn btn-primary mr-2 mb-2" style="font-size: 1.015625rem;">
-                                    <i class="fas fa-trash-alt mr-2"></i>
+                                    <i class='bx bxs-trash bx-sm mr-2'></i>
                                     Suppr.
                                 </a>
                                 <a href="{{ path('message_show', {'id': message.id}) }}" class="btn btn-danger mr-2 mb-2" style="font-size: 1.015625rem;">
-                                    <i class="fas fa-eye mr-2"></i>
+                                    <i class='bx bx-show-alt bx-sm mr-2'></i>
                                     Voir
                                 </a>
                             </td>
@@ -102,7 +102,7 @@
 
         <div class="d-flex justify-content-center mb-3">
             <a href="{{ path('app_logout') }}" class="btn btn-lg btn-primary">
-                <i class="fas fa-power-off mr-2"></i>
+                <i class='bx bx-power-off bx-sm mr-2' ></i>
                 Déconnexion</a>
         </div>
 
