--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -35,12 +35,12 @@
 
             <div>
                 <a href="{{ path('message_delete', {'id': message.id}) }}" class="btn btn-primary mb-2" style="font-size: 1.015625rem;">
-                    <i class="fas fa-trash-alt mr-2"></i>
+                    <i class='bx bxs-trash bx-sm mr-2'></i>
                     Supprimer
                 </a>
                 <br>
                 <a href="{{ path('messages_page', {'id': message.id}) }}" class="btn btn-danger mb-2" style="font-size: 1.015625rem;">
-                    <i class="fas fa-undo mr-2"></i>
+                    <i class='bx bx-undo bx-sm mr-2' ></i>
                     Retour à la liste
                 </a>
             </div>
