--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,12 @@
         {% endif %}
 
         <form method="post">
-            <h1 class="mb-5 pt-3 font-weight-normal">Connexion</h1>
+            <div class="row align-items-center">
+                <div class="lottie mb-5 pt-3 mx-2" data-animation-path="animation/" data-anim-loop="true" data-name="ninja" id="lock"></div>
+                <h1 class="mb-5 pt-3 font-weight-normal">
+                    Connexion
+                </h1>
+            </div>
 
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control login-control" required autofocus>
@@ -26,9 +31,15 @@
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-            <button class="btn btn-success mt-5 mb-3" type="submit">Valider</button>
+            <button class="btn btn-success mt-5 mb-3" type="submit">
+                <i class='bx bxs-lock-open bx-sm mr-2'></i>
+                Valider
+            </button>
             {% if app.user %}
-               <a href="{{ path('app_logout') }}" class="btn btn-primary mt-5 mb-3" id="admin-logout">Déconnexion</a>
+               <a href="{{ path('app_logout') }}" class="btn btn-primary mt-5 mb-3" id="admin-logout">
+                    <i class='bx bx-power-off bx-sm mr-2' ></i>   
+                    Déconnexion
+                </a>
             {% endif %}
         </form>
     </div>
