--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -7,6 +7,8 @@ html, body {
 
 body {
     margin: 0;
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom right, rgb(1, 31, 85), rgb(128, 143, 170));
 }
 
 /*********************************** NAVBAR **************************************/
@@ -592,7 +594,7 @@ label.required:before {
 /*********************************** FOOTER **************************************/
 
 .footer {
-    color: #cf9f69;
+    color: white;
     margin-bottom: 20px;
 }
 
