Fix Bug Flip-card

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -41,73 +41,69 @@
 
     <div class="container" id="technologies">
         <div class="row">
-            <div class="col-12 col-lg-6 px-0 mb-5" id="frontend">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front frontend-card-front">
-                        </div>
-                        <div class="flip-card-back frontend-card-back">
-                            <ul class="text-center m-0 p-0">
-                                <li class="header-li">FRONT</li>
-                                <li class="li">
-                                    <i class="fab fa-html5"></i> 
-                                    HTML 5
-                                </li>
-                                <li class="li">
-                                    <i class="fab fa-css3-alt"></i>
-                                    CSS 3
-                                </li>
-                                <li class="li">
-                                    <i class="fab fa-js"></i>
-                                    JavaScript (+ jQuery)
-                                </li>
-                                <li class="li">
-                                    <i class="fab fa-bootstrap"></i>
-                                    Bootstrap
-                                </li>
-                                <li class="li">
-                                    <i class="fab fa-react"></i>
-                                    React
-                                </li>
-                            </ul>
-                        </div>
+            <div class="col-6 px-0 mb-5 card-container">
+                <div class="card">
+                    <div class="front" style="background-image: url('../pictures/frontend_resized_recolored.png')">
                     </div>
-                </div> 
+                    <div class="back" style="background-color: #cf9f69; color: black">
+                        <ul class="text-center m-0 p-0">
+                            <li class="header-li">FRONT</li>
+                            <li class="li">
+                                <i class="fab fa-html5"></i> 
+                                HTML 5
+                            </li>
+                            <li class="li">
+                                <i class="fab fa-css3-alt"></i>
+                                CSS 3
+                            </li>
+                            <li class="li">
+                                <i class="fab fa-js"></i>
+                                JavaScript (+ jQuery)
+                            </li>
+                            <li class="li">
+                                <i class="fab fa-bootstrap"></i>
+                                Bootstrap
+                            </li>
+                            <li class="li">
+                                <i class="fab fa-react"></i>
+                                React
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 col-lg-6 px-0 mb-5" id="backend">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front backend-card-front">
-                        </div>
-                        <div class="flip-card-back backend-card-back">
-                            <ul class="text-center m-0 p-0">
-                                <li class="header-li" class="header-li">BACK</li>
-                                <li class="li">
-                                    <i class="fab fa-php"></i>
-                                    PHP (+ 
-                                    <i class="fab fa-symfony"></i>
-                                    Symfony 4 & 5)
-                                </li>
-                                <li class="li">
-                                    <i class="fas fa-spider"></i>
-                                    API Platform
-                                </li>
-                                <li class="li">
-                                    <i class="fas fa-database"></i>
-                                    MySQL
-                                </li>
-                                <li class="li">
-                                    <i class="fas fa-database"></i>
-                                    MS SQL
-                                </li>
-                                <li class="li">
-                                    <i class="fab fa-git-alt"></i>
-                                    Git
-                                </li>
-                            </ul>
-                        </div>
+            <div class="col-6 px-0 mb-5 card-container">
+                <div class="card">
+                    <div class="front" style="background-image: url('../pictures/backend_resized.png'); ">
                     </div>
-                </div> 
+                    <div class="back" style="background-color: #0098ff;">
+                        <ul class="text-center m-0 p-0">
+                            <li class="header-li" class="header-li">BACK</li>
+                            <li class="li">
+                                <i class="fab fa-php"></i>
+                                PHP (+ 
+                                <i class="fab fa-symfony"></i>
+                                Symfony 4 & 5)
+                            </li>
+                            <li class="li">
+                                <i class="fas fa-spider"></i>
+                                API Platform
+                            </li>
+                            <li class="li">
+                                <i class="fas fa-database"></i>
+                                MySQL
+                            </li>
+                            <li class="li">
+                                <i class="fas fa-database"></i>
+                                MS SQL
+                            </li>
+                            <li class="li">
+                                <i class="fab fa-git-alt"></i>
+                                Git
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
