--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -135,124 +135,137 @@ body {
 
 /*********************************** FLIP *****************************************/
 
-#frontend, #backend {
+.card-container {
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    -webkit-perspective: 1000px;
+    -moz-perspective: 1000px;
+    -ms-perspective: 1000px;
+    perspective: 1000px;
+    padding-left: 1%;
     height: 50vh;
-    width: 100vw;
+    min-width: 100%;
+}
+
+@media screen and (orientation: portrait) and (min-width: 768px) {
+    .card-container {
+        min-width: 50%;
+        height: 40vh;
+    }
+
+    .back ul {
+        font-size: 2vh !important;
+    }
 }
 
 @media screen and (orientation: landscape) {
-    #frontend, #backend {
+    .card-container {
         height: 100vh;
-        width: 50vw;
+        min-width: 50%;
     }
 
-    .flip-card-back ul {
-        font-size: 5vh !important; 
+    .back ul {
+        font-size: 5vh !important;
     }
 }
 
-@media screen and (min-width: 992px) and (orientation: landscape) {
-    #frontend, #backend {
+@media screen and (orientation: landscape) and (min-width: 992px) {
+    .card-container {
         height: 50vh;
     }
 
-    .flip-card-back ul {
-        font-size: 2.5vh !important; 
+    .back ul {
+        font-size: 2.5vh !important;
     }
 }
 
-.flip-card {
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    perspective: 1000px;
-    -webkit-perspective: 1000px;
-    -ms-perspective: 1000px;
-}
-  
+@media screen and (orientation: landscape) and (min-width: 1200px) {
+    .card-container {
+        height: 70vh;
+    }
 
-.flip-card-inner {
-    position: relative;
-    width: 100%;
+    .back ul {
+        font-size: 3.5vh !important;
+    }
+}
+
+@media screen and (orientation: landscape) and (min-width: 1440px) {
+    .card-container {
+        height: 50vh;
+    }
+
+    .back ul {
+        font-size: 2vh !important;
+    }
+}
+
+.card {
+    width: 99%;
     height: 100%;
-    text-align: center;
-    color: white;
-    transition: transform 2s;
+    cursor: pointer;
+    -webkit-transition: -webkite-transform 0.6s;
+    -moz-transition: -moz-transform 0.6s;
+    -o-transition: -o-transform 0.6s;
+    transition: transform 0.6s;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
 }
-  
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+
+.card.flipped {
     -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
-.back-is-visible {
-    transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
+.card .front, .card .back {
+    display: block;
     height: 100%;
-    backface-visibility: hidden;
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-size: 5vh;
+    position: absolute;
     -webkit-backface-visibility: hidden;
-    z-index: 2;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 2px 5px rgba(0, 0, 0, 0.26);
 }
 
-.frontend-card-front, .backend-card-front {
+.card .front {
     background-position: center;
     background-repeat: no-repeat; 
     background-size: cover;
     height: 100%;
+}
+
+.card .back {
+    width: 100%;
+    height: 100%;
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.back ul {
+    font-size: 2.5vh ; 
+    list-style-type: none;
+    height: 100%;
     width: 100%;
 }
 
-.frontend-card-back, .backend-card-back {
-    transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    z-index: 1;
-}
-
-.back-is-visible .frontend-card-back, .back-is-visible .backend-card-back {
-    z-index: 3;
-}
-
-.frontend-card-front {
-    background-image: url("../pictures/frontend_resized_recolored.png");
-
-}
-
-.frontend-card-back {
-    background-color: #cf9f69;
-    color: black;
-}
-
-.backend-card-front {
-    background-image: url("../pictures/backend_resized.png"); 
-}
-
-.backend-card-back {
-    background-color: #0098ff;
-}
-
-.flip-card-back ul {
-    font-size: 2.5vh ; 
-    list-style-type: none;
-}
-
-.flip-card-back ul li {
+.back ul li {
     border: 1px solid #011f55;
-    margin-top: -1px;
     padding: 12px;
+    height: 16.66%;
 }
 
 .header-li {
     background-color: #011f55;
     color: white;
+    height: 16.66%;
 }
 
 /********************************** CAROUSEL **************************************/
@@ -597,7 +610,7 @@ label.required:before {
 /*********************************** FOOTER **************************************/
 
 .footer {
-    color: #cf9f69;
+    color: white;
     margin-bottom: 20px;
 }
 
