--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -200,7 +200,7 @@ body {
     }
 }
 
-.card {
+.card-inner {
     width: 99%;
     height: 100%;
     cursor: pointer;
@@ -212,14 +212,14 @@ body {
     transform-style: preserve-3d;
 }
 
-.card.flipped {
+.card-inner.flipped {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
-.card .front, .card .back {
+.card-inner .front, .card-inner .back {
     display: block;
     height: 100%;
     width: 100%;
@@ -233,14 +233,14 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 2px 5px rgba(0, 0, 0, 0.26);
 }
 
-.card .front {
+.card-inner .front {
     background-position: center;
     background-repeat: no-repeat; 
     background-size: cover;
     height: 100%;
 }
 
-.card .back {
+.card-inner .back {
     width: 100%;
     height: 100%;
     -webkit-transform: rotateY(180deg);
