--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -42,7 +42,7 @@
     <div class="container" id="technologies">
         <div class="row">
             <div class="col-6 px-0 mb-5 card-container">
-                <div class="card">
+                <div class="card-inner">
                     <div class="front" style="background-image: url('../pictures/frontend_resized_recolored.png')">
                     </div>
                     <div class="back" style="background-color: #cf9f69; color: black">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="col-6 px-0 mb-5 card-container">
-                <div class="card">
+                <div class="card-inner">
                     <div class="front" style="background-image: url('../pictures/backend_resized.png'); ">
                     </div>
                     <div class="back" style="background-color: #0098ff;">
