--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -15,7 +15,7 @@
     <div class="container mb-5" id="goals">
         <div class="jumbotron" style="background-color: #cf9f69;">
             <i class="bx bxs-quote-alt-left bx-lg"></i>
-            <h1 class="ml-5 type-writer"></h1>
+            <h1 class="type-writer"></h1>
             <hr class="mx-5">
             <div class="container text-center">
                 <blockquote class="blockquote goals-content">
