--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,10 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="menu-logo">
+            <i class='bx bx-menu-alt-left'></i>
+        </div>
+        <nav class="navbar navbar-expand-xl navbar-dark fixed-top">
             <a class="navbar-brand" href="{{ path('homepage') }}">
                 <img src="../pictures/photo.jpg" alt="Photo de Baptiste Bidaux" class="avatar">
             </a>
